--- a/test-class.html
+++ b/test-class.html
@@ -10,20 +10,25 @@
 	  <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" />
 
 	<style>
+		*{
+			margin: 0;
+			padding: 0;
+		}
 		#container{
 			width: 100%;
 			height: 100%;
 		}
 		.note{
-			padding: 0.5em 0;
-			background: blue;
+			padding: 20px 0 0 0;
+			background: lightblue;
 		}
 		.note textarea{
 			width: 100%;
 			height: 100%;
 			resize: none;
 			outline: none;
-  			border: 0;
+  			border: 1px dotted #333;
+  			background: lightblue;
 		}
 		.note h3{
 			height: 1em;
