--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <div id="wrapper">
     <div id="controls">
-      <input type="button" id="clear" value="clear all" />
+      <!-- <input type="button" id="clear" value="clear all" /> -->
     </div>
      <div id="drag1" class="draggable ui-widget-content"><textarea></textarea></div>
      <div id="drag2" class="draggable ui-widget-content"><textarea></textarea></div>
