--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
   <script src="http://code.jquery.com/ui/1.10.2/jquery-ui.js"></script>
   <script type="text/javascript" src="lib/marked.js"></script>
+  <script type="text/javascript" src="lib/highlight.pack.js"></script>
   <script type="text/javascript" src="notes.js"></script>
   <link rel="stylesheet" href="style.css" />
   <script>
