marked hide instead of remove, issue #1 fixed, but new issue: must click 2 times after edit for new edit focusout now works also by clicking on workspace

--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
     <div id="controls">
       <!-- <input type="button" id="clear" value="clear all" /> -->
     </div>
-     <div id="drag1" class="draggable ui-widget-content"><textarea></textarea></div>
-     <div id="drag2" class="draggable ui-widget-content"><textarea></textarea></div>
-     <div id="drag3" class="draggable ui-widget-content"><textarea></textarea></div>
-     <div id="drag4" class="draggable ui-widget-content"><textarea></textarea></div>
-     <div id="drag5" class="draggable ui-widget-content"><textarea></textarea></div>
-     <div id="drag6" class="draggable ui-widget-content"><textarea></textarea></div>
-     <div id="drag7" class="draggable ui-widget-content"><textarea></textarea></div>
-     <div id="drag8" class="draggable ui-widget-content"><textarea></textarea></div>
-     <div id="drag9" class="draggable ui-widget-content"><textarea></textarea></div>
-     <div id="drag10" class="draggable ui-widget-content"><textarea></textarea></div>
+     <div id="drag1" class="draggable ui-widget-content"><textarea></textarea><div class="marked"></div></div>
+     <div id="drag2" class="draggable ui-widget-content"><textarea></textarea><div class="marked"></div></div>
+     <div id="drag3" class="draggable ui-widget-content"><textarea></textarea><div class="marked"></div></div>
+     <div id="drag4" class="draggable ui-widget-content"><textarea></textarea><div class="marked"></div></div>
+     <div id="drag5" class="draggable ui-widget-content"><textarea></textarea><div class="marked"></div></div>
+     <div id="drag6" class="draggable ui-widget-content"><textarea></textarea><div class="marked"></div></div>
+     <div id="drag7" class="draggable ui-widget-content"><textarea></textarea><div class="marked"></div></div>
+     <div id="drag8" class="draggable ui-widget-content"><textarea></textarea><div class="marked"></div></div>
+     <div id="drag9" class="draggable ui-widget-content"><textarea></textarea><div class="marked"></div></div>
+     <div id="drag10" class="draggable ui-widget-content"><textarea></textarea><div class="marked"></div></div>
   </div>
  </body>
 </html>
